latest version of condtab

--- a/conductivity/install
+++ b/conductivity/install
@@ -12,9 +12,10 @@ function check_okay {
 }
 
 this_module=${PWD##*/}
+datafile="data/condtab.dat"
 ./fetch_data
 mkdir -p ../data/conductivity/cache
-cp data/condall06.dat ../data/conductivity/
+cp $datafile ../data/conductivity/
 check_okay
 ./build_and_test
 check_okay
