Squashed commit of the following:
commit a94c0171f4e82cc851eba45f52401306959bcbf9
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Thu Mar 25 11:41:47 2021 -0400

    Update README.md

commit bb37a5c679333c8a20c50bdc51dc825b9ffe59ba
Merge: 20b4d27 172a416
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Thu Mar 25 11:31:22 2021 -0400

    Merge pull request #11 from nworbde/electron-conductivity

    Electron conductivity

commit 172a416138f70e44cab07fca7548ba4859b4c150
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Tue Mar 9 10:58:38 2021 -0500

    Update conductivity_def.f

    removed old controls on conductivity channels

commit f7a48c37428609e2e947bef3dcab8469c12608bc
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Tue Mar 9 10:47:46 2021 -0500

    added exceptions lib to examples

commit caafb0282c5f3763c724536dd3d6a248ad3f357f
Merge: f337e56 20b4d27
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Sat Mar 6 13:43:02 2021 -0500

    Merge branch 'master' into electron-conductivity

commit f337e568c23d396baaf9df6cfbf9ed2040996633
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Tue Mar 2 15:20:29 2021 -0500

    Update tabulate_conductivity.f

    test of interpolation scheme

commit 1c8e1c51678911ec828849a88888420d59b01f87
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Tue Mar 2 15:20:17 2021 -0500

    latest version of condtab

commit 20b4d275784123f2f95235f43af55b4feb45ee79
Merge: 1882ca3 b11b051
Author: Edward Brown <ebrown@pa.msu.edu>
Date:   Wed Feb 17 09:56:24 2021 -0500

    Merge pull request #9 from sudhanvalalit/master

    added git lfs info to install

commit b11b0518020e93414bf5417496a2e226c7d0f6bb
Author: Sudhanva Lalit <sudhanvalalit@users.noreply.github.com>
Date:   Wed Feb 17 09:47:30 2021 -0500

    Changed "linux you are using" to "operating system you are using"

    Also changed "Reclone the repository if necessary." to "Reclone the dStar repository if necessary."

commit 29c2c948b3dd2be7c76caeb62fba5024219b0dc8
Author: Edward Brow

--- a/conductivity/install
+++ b/conductivity/install
@@ -12,6 +12,11 @@ function check_okay {
 }
 
 this_module=${PWD##*/}
+datafile="data/condtab.dat"
+./fetch_data
+mkdir -p ../data/conductivity/cache
+cp $datafile ../data/conductivity/
+check_okay
 ./build_and_test
 check_okay
 cd make
