update install scripts

--- a/dStar_crust/install
+++ b/dStar_crust/install
@@ -12,15 +12,13 @@ function check_okay {
 }
 
 this_module=${PWD##*/}
-./fetch_data
-check_okay
+# ./fetch_data
+# check_okay
 mkdir -p ../data/crust_data/cache
 check_okay
 ./build_and_test
 check_okay
-./preprocess_JINAcrust
-cp data/*.bin ../data/crust_data/cache/
-cp data/*_{isos,summary} ../data/crust_data/
+
 check_okay
 cd make
 make install
